# publicnotice-ai

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
.github/workflows/: ci-api.yml  ci-web.yml
apps/api/: README.md  alembic.ini  pyproject.toml  railway.json
apps/api/migrations/: env.py
apps/api/migrations/versions/: 0001_initial.py
apps/api/scripts/: seed.py
apps/api/src/publicnotice/: __init__.py  config.py  main.py
apps/api/src/publicnotice/adapters/: __init__.py
apps/api/src/publicnotice/adapters/chunker/: __init__.py  base.py  recursive.py
apps/api/src/publicnotice/adapters/embeddings/: __init__.py  base.py  ollama.py  openai.py
apps/api/src/publicnotice/adapters/llm/: __init__.py  base.py  gemini.py  ollama.py  openai_compatible.py
apps/api/src/publicnotice/adapters/pdf/: __init__.py  base.py  pymupdf.py
apps/api/src/publicnotice/adapters/vectorstore/: __init__.py  base.py  pgvector.py
apps/api/src/publicnotice/api/: __init__.py  deps.py  errors.py  providers.py  rate_limit.py
apps/api/src/publicnotice/api/v1/: __init__.py  chat.py  documents.py  health.py
apps/api/src/publicnotice/domain/: __init__.py  chunk.py  document.py  exceptions.py
apps/api/src/publicnotice/infra/: __init__.py  db.py  logging.py  models.py  repositories.py
apps/api/src/publicnotice/services/: __init__.py  chat.py  ingestion.py  retrieval.py
apps/api/tests/: conftest.py
apps/api/tests/unit/: test_chat_service.py  test_chunker.py  test_config.py  test_health.py  test_ingestion_service.py  test_pdf_parser.py
apps/web/: .env.example  README.md  biome.json  next.config.ts  package.json  pnpm-lock.yaml  vercel.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: chat.tsx  citation-chip.tsx  confirm-dialog.tsx  demo-banner.tsx  login-dialog.tsx  providers.tsx  sidebar.tsx  upload-button.tsx  user-menu.tsx
apps/web/src/hooks/: use-chat-stream.ts  (+3 more)
data/sample/: README.md
docs/: architecture.md  development.md
docs/adr/: 0001-monorepo-structure.md  0002-pgvector-over-qdrant.md  0003-ollama-as-default-llm.md  0004-hexagonal-architecture.md  0005-deployment-strategy.md
infra/docker/: api.Dockerfile  web.Dockerfile
infra/docker/postgres/: init.sql
scripts/: bootstrap.sh  pull-ollama-models.sh
(+15 files in other folders)
