[project]
name = "publicnotice-api"
version = "0.1.0"
description = "RAG API para editais públicos brasileiros"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Bruno Dias" }]

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",       # uploads
    "sse-starlette>=2.1.3",           # streaming SSE
    "slowapi>=0.1.9",                 # rate limiting
    # Config / validação
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # DB
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pgvector>=0.3.6",
    # PDF + chunking
    "pymupdf>=1.24.0",
    # LLM clients
    "httpx>=0.27.0",                  # ollama via REST
    "openai>=1.54.0",                 # também usado pra Groq (API compatível)
    "google-genai>=0.3.0",            # gemini
    # Logging / observabilidade
    "structlog>=24.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "testcontainers[postgres]>=4.8.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-requests",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/publicnotice"]

# ─── Ruff ────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]                     # linha longa: deixa o formatter cuidar

[tool.ruff.format]
quote-style = "double"

# ─── Mypy ────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

# ─── Pytest ──────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "unit: testes rápidos sem I/O",
    "integration: testes com DB/serviços",
    "e2e: testes end-to-end",
    "evals: avaliação de qualidade do RAG",
]
